--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -7,9 +7,24 @@ a {
   color: aquamarine;
 }
 
+p {
+  color: gray;
+  font-family: verdana;
+  font-size: 21px;
+}
+
+.img-block {
+  display: block;
+  margin: auto;
+  margin-top: 20px;
+}
 .big-headers {
   font-family: Verdana;
   font-weight: normal;
   font-size: 50px;
   color: white;
+}
+
+#footer {
+  text-align: right;
 }
